column-count: 0 should not prevent margin-collapse through https://bugs.webkit.org/show_bug.cgi?id=65159

Patch by Tab Atkins <jackalmage@gmail.com> on 2012-10-10
Reviewed by Tony Chang.

Source/WebCore:

This patch makes "column-count:0" be properly recognized as invalid syntax,
as it violates the property grammar in the spec.

Tests: fast/multicol/zeroColumnCount.html

* css/CSSParser.cpp:
(WebCore::CSSParser::validUnit):
(WebCore::CSSParser::parseValue):
* css/CSSParser.h:

LayoutTests:

Fixed the zeroColumnCount.html test to properly test that "0" is an invalid CSS value,
rather than just ensuring that it doesn't crash.

* fast/multicol/zeroColumnCount-expected.txt:
* fast/multicol/zeroColumnCount.html:

Canonical link: https://commits.webkit.org/116969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130997 268f45cc-cd09-0410-ab3c-d52691b4dbfc