Source/WebCore/css/CSSParser.h
@@ -525,19 +525,20 @@ private:
 
     // defines units allowed for a certain property, used in parseUnit
     enum Units {
-        FUnknown   = 0x0000,
-        FInteger   = 0x0001,
-        FNumber    = 0x0002,  // Real Numbers
-        FPercent   = 0x0004,
-        FLength    = 0x0008,
-        FAngle     = 0x0010,
-        FTime      = 0x0020,
+        FUnknown = 0x0000,
+        FInteger = 0x0001,
+        FNumber = 0x0002, // Real Numbers
+        FPercent = 0x0004,
+        FLength = 0x0008,
+        FAngle = 0x0010,
+        FTime = 0x0020,
         FFrequency = 0x0040,
-        FRelative  = 0x0100,
+        FPositiveInteger = 0x0080,
+        FRelative = 0x0100,
 #if ENABLE(CSS_IMAGE_RESOLUTION)
-        FResolution= 0x0200,
+        FResolution = 0x0200,
 #endif
-        FNonNeg    = 0x0400
+        FNonNeg = 0x0400
     };
 
     friend inline Units operator|(Units a, Units b)
